samples/_failures_safe/1761507785_eaab2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1960565c.c: In function ‘main’:
./samples/SAFE/__tmp_1960565c.c:139:5: error: ‘init_’ undeclared (first use in this function); did you mean ‘int’?
  139 |     init_
      |     ^~~~~
      |     int
./samples/SAFE/__tmp_1960565c.c:139:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_1960565c.c:139:10: error: expected ‘;’ at end of input
  139 |     init_
      |          ^
      |          ;
./samples/SAFE/__tmp_1960565c.c:139:5: error: expected declaration or statement at end of input
  139 |     init_
      |     ^~~~~
